# S-P-Global-Assignment

./: .gitignore  README.md  pyproject.toml
input/processed/: aggregated_data_time_zone.parquet  aggregated_data_zone.parquet
input/raw/census/: nyc_census_tracts.parquet
input/raw/shapefiles/tiger_census_tracts/: tl_2025_36_tract.dbf  tl_2025_36_tract.shp.iso.xml  tl_2025_36_tract.shx
notebooks/: 01_data_cleaning.ipynb  02_data_exploration.ipynb  03_ml_underservice_detection.ipynb
output/models/: linear_model_best.joblib  random_forest_best.joblib
src/: fetch_census_data.py
